--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="portfolio">作品展示<br>Portfolio</div>
     </div>
     <div id="content1">
-
-        <div class="text">
+        <img src="./img/S__7373046.jpg" alt="">
+        <div class="text">          
             <h1>自傳簡歷</h1><br>
             你好，我叫李嘉皓<br><br>
             本人畢業於弘光科技大學餐旅管理系，在有感餐飲並非是自己真正嚮往的工作時，在與資訊相關行業的同儕了解後發現，對資訊業的工作有著強烈的憧憬，在寫程式中尋求更多不同的知識並運用解決問題非常有成就感，亦然參加職訓中心之電商培訓課程，畢業後亦也同時積極尋找網路上的各種教學及資訊精進自己，雖在資訊業實戰力尚不成熟，本人希望能夠在做中學習、更加精進自己的實力並實現在工作之成果中！
